force-app/main/default/objects/Animal__c/fields/asd__c.field-meta.xml
<CustomField>
    <fullName>asd__c</fullName>
    <defaultValue>false</defaultValue>
    <label>asd NEW</label>
    <type>Checkbox</type>
</CustomField>