force-app/main/default/objects/Animal__c/fields/dateasdasd__c.field-meta.xml
<CustomField>
    <fullName>dateasdasd__c</fullName>
    <description>if entered, the checkboxe qwe and asd should get removed</description>
    <inlineHelpText>selecting date will set the selected LT/3RD PARTY to false.
and have to contact admin in case you wanted it to revert back.</inlineHelpText>
    <label>dateasdasd</label>
    <type>Date</type>
</CustomField>