force-app/main/default/objects/Animal__c/fields/qwe__c.field-meta.xml
<CustomField>
    <fullName>qwe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>qwe NEW</label>
    <type>Checkbox</type>
</CustomField>