force-app/main/default/objects/Animal__c/validationRules/asdasd.validationRule-meta.xml
<ValidationRule>
    <fullName>asdasd</fullName>
    <active>true</active>
    <description>if qwe is selected then you cannot select asd.</description>
    <errorConditionFormula>qwe__c  = True  &amp;&amp;  asd__c = True</errorConditionFormula>
    <errorDisplayField>asd__c</errorDisplayField>
    <errorMessage>can only select 1</errorMessage>
</ValidationRule>