force-app/main/default/objects/Animal__c/validationRules/dateCheckboxConfict.validationRule-meta.xml
<ValidationRule>
    <fullName>dateCheckboxConfict</fullName>
    <active>false</active>
    <description>cant select checkbox(asd/qwe) if date is not null</description>
    <errorConditionFormula>asd__c = True &amp;&amp; !ISBLANK(dateasdasd__c )</errorConditionFormula>
    <errorMessage>cant select asd while date is not empty</errorMessage>
</ValidationRule>