force-app/main/default/objects/Animal__c/validationRules/dateCheckboxConfict1.validationRule-meta.xml
<ValidationRule>
    <fullName>dateCheckboxConfict1</fullName>
    <active>false</active>
    <description>cant select checkbox(qwe) if date is not null</description>
    <errorConditionFormula>(qwe__c = True &amp;&amp; !ISBLANK(dateasdasd__c ))</errorConditionFormula>
    <errorMessage>cant select qwe while date is not empty</errorMessage>
</ValidationRule>